hphp/hack/test/typecheck/xhp_modifier/regular_class_names_colon.php
<?hh // strict

// Regular classes containing colon but no xhp colon prefix are not allowed.
class foo:bar {}
